// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameFilter component snaps renderers should render NameFilter in default mode 1`] = `
<form
  className="name-filter theme-name-filter"
>
  <label
    className="sr-only"
    htmlFor="name-filter-input"
  >
    Example label
  </label>
  <DebounceInput
    autoComplete="off"
    className="form-control"
    debounceTimeout={300}
    element="input"
    forceNotifyByEnter={true}
    forceNotifyOnBlur={true}
    id="name-filter-input"
    minLength={0}
    onChange={[Function]}
    placeholder="Example placeholder"
    type="text"
  />
</form>
`;

exports[`NameFilter component snaps renderers should render NameFilter without label 1`] = `
<form
  className="name-filter theme-name-filter"
>
  <DebounceInput
    autoComplete="off"
    className="form-control"
    debounceTimeout={300}
    element="input"
    forceNotifyByEnter={true}
    forceNotifyOnBlur={true}
    id="name-filter-input"
    minLength={0}
    onChange={[Function]}
    placeholder="Example placeholder"
    type="text"
  />
</form>
`;

exports[`NameFilter component snaps renderers should render NameFilter without placeholder 1`] = `
<form
  className="name-filter theme-name-filter"
>
  <label
    className="sr-only"
    htmlFor="name-filter-input"
  >
    Example label
  </label>
  <DebounceInput
    autoComplete="off"
    className="form-control"
    debounceTimeout={300}
    element="input"
    forceNotifyByEnter={true}
    forceNotifyOnBlur={true}
    id="name-filter-input"
    minLength={0}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
</form>
`;

exports[`NameFilter component snaps renderers should render NameFilter without placeholder and label 1`] = `
<form
  className="name-filter theme-name-filter"
>
  <DebounceInput
    autoComplete="off"
    className="form-control"
    debounceTimeout={300}
    element="input"
    forceNotifyByEnter={true}
    forceNotifyOnBlur={true}
    id="name-filter-input"
    minLength={0}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
</form>
`;
